compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__pipes__call_pipeline_result.snap
---
source: compiler-core/src/fsharp/tests/pipes.rs
expression: "\npub fn foo() {\n  { 1 |> add }(1)\n}\n\npub fn add(x) {\n  fn(y) { x + y }\n}\n"
---
module rec my.``mod``
let add (x: int): int -> int = begin
    fun(y: int) -> begin x + y end
end
let foo (): int = begin
    begin
        begin
            let _pipe = 1
            (add (_pipe))
        end
    end (1)
end
