compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__pipes__clever_pipe_rewriting1.snap
---
source: compiler-core/src/fsharp/tests/pipes.rs
expression: "\npub fn apply(f: fn(a, Int) -> b, a: a) { a |> f(1) }\n"
---
module rec my.``mod``
let apply (f: 't8 -> int64 -> 't9) (a: 't8) = begin
    begin
        let _pipe = a
        (f (_pipe) (1L))
    end
end
