compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__pipes__pipe_in_call.snap
---
source: compiler-core/src/fsharp/tests/pipes.rs
expression: "\npub fn foo() {\n  123\n  |> two(\n    1 |> two(2),\n    _,\n  )\n}\n\npub fn two(a, b) {\n  a\n}\n"
---
module rec my.``mod``
let two (a: 'u9) (b: 'u10) = begin
    a
end
let foo () = begin
    begin
        let _pipe = 123
        ((fun(_capture: int) -> begin two (begin
                let _pipe = 1
                (two (_pipe) (2))
            end) (_capture) end) (_pipe))
    end
end
