compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__pipes__pipe_in_eq.snap
---
source: compiler-core/src/fsharp/tests/pipes.rs
expression: "fn id(x) {\n  x\n}\n\npub fn foo() {\n    1 == 1 |> id\n}"
---
module rec my.``mod``

let private id (x: 'u8) = begin
    x
end
let foo () = begin
    1L = begin
        let _pipe = 1L
        (id _pipe)
    end
end
