compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__pipes__pipe_in_list.snap
---
source: compiler-core/src/fsharp/tests/pipes.rs
expression: "pub fn x(f) {\n  [\n    1 |> f\n  ]\n}"
---
module rec my.``mod``

let x (f: int64 -> 'u11) = begin
    [begin
        let _pipe = 1L
        (f _pipe)
    end]
end
