compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__pipes__pipe_in_spread.snap
---
source: compiler-core/src/fsharp/tests/pipes.rs
expression: "pub type X {\n  X(a: Int, b: Int)\n}\n\nfn id(x) {\n  x\n}\n\npub fn foo(x) {\n  X(..x, a: 1 |> id)\n}"
---
module rec my.``mod``

type X = { a: int64; b: int64 }
let private id (x: 'u8) = begin
    x
end
let foo (x: X) = begin
    { x with a = begin
         let _pipe = 1L
         (id _pipe)
     end }
end
