compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__pipes__pipe_in_tuple.snap
---
source: compiler-core/src/fsharp/tests/pipes.rs
expression: "pub fn x(f) {\n  #(\n    1 |> f\n  )\n}"
---
module rec my.``mod``
let x (f: int -> 'u10) = begin
    (begin
        let _pipe = 1
        (f (_pipe))
    end)
end
